// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Onboarding/FormSection Multiple Form Sections 1`] = `
<div>
  <div>
    <div>
      <div
        class="Viewweb__View-sc-1o0hmxm-0 eayzPs"
      >
        <div
          class="Viewweb__View-sc-1o0hmxm-0 Card__StyledCard-sc-1tygnup-0 jiZCa-d Spaceweb__Space-sc-1abqisc-0 likIJL"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 eayzPs Spaceweb__Space-sc-1abqisc-0 epsywS"
          >
            <div
              class="Textweb__Text-sc-1qrdpx3-0 eEdtSY"
              color="shade.980"
              data-testid="ds-text"
            >
              PAN Details
            </div>
            <div
              class="Textweb__Text-sc-1qrdpx3-0 jSxWAC"
              color="shade.950"
              data-testid="ds-text"
            >
              These details will be verified with the government database
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1o0hmxm-0 FormSection__StyledView-sc-1kyf1yj-0 ilKiPB"
          >
            <div
              class="Viewweb__View-sc-1o0hmxm-0 eayzPs Spaceweb__Space-sc-1abqisc-0 hvcwgq"
            >
              <div
                class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 lgHtgi"
              >
                <div
                  class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hogGzB"
                >
                  <div
                    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hfOCsH"
                  >
                    <div
                      class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InteractionContainer-sc-18gz688-3 hMqHIj"
                    >
                      <div
                        class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__FillContainer-sc-18gz688-2 jxHNUe Spaceweb__Space-sc-1abqisc-0 fAtZGf Sizeweb__Size-sc-1e5yf1-0 dCxfKl"
                      >
                        <div
                          class="Viewweb__View-sc-1o0hmxm-0 Labelweb__FloatView-sc-1eubdu6-0 kxSngp Spaceweb__Space-sc-1abqisc-0 zryoY"
                        >
                          <label
                            class="Textweb__Text-sc-1qrdpx3-0 Labelweb__StyledText-sc-1eubdu6-1 dtOgfF"
                            color="shade.980"
                            data-testid="ds-text"
                            value=""
                            width="auto"
                          >
                            Business Owner's PAN
                          </label>
                        </div>
                        <div
                          class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InputContainer-sc-18gz688-0 bxHyXK Sizeweb__Size-sc-1e5yf1-0 ivlOax Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
                        >
                          <input
                            class="TextInputweb__StyledInput-sc-18gz688-1 hxHBWr Sizeweb__Size-sc-1e5yf1-0 exhaHT Spaceweb__Space-sc-1abqisc-0 gvLSev Flexweb__Flex-sc-1yhcoea-0 fCJFon"
                            data-testid="ds-text-input"
                            name="promoter_pan"
                            placeholder="Enter text here"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class="Viewweb__View-sc-1o0hmxm-0 Lineweb__Line-sc-1xfvg0y-0 kNJYXM"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 lgHtgi"
            >
              <div
                class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hogGzB"
              >
                <div
                  class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hfOCsH"
                >
                  <div
                    class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InteractionContainer-sc-18gz688-3 hMqHIj"
                  >
                    <div
                      class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__FillContainer-sc-18gz688-2 jxHNUe Spaceweb__Space-sc-1abqisc-0 fAtZGf Sizeweb__Size-sc-1e5yf1-0 dCxfKl"
                    >
                      <div
                        class="Viewweb__View-sc-1o0hmxm-0 Labelweb__FloatView-sc-1eubdu6-0 kxSngp Spaceweb__Space-sc-1abqisc-0 zryoY"
                      >
                        <label
                          class="Textweb__Text-sc-1qrdpx3-0 Labelweb__StyledText-sc-1eubdu6-1 dtOgfF"
                          color="shade.980"
                          data-testid="ds-text"
                          value=""
                          width="auto"
                        >
                          Business Owner's Name
                        </label>
                      </div>
                      <div
                        class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InputContainer-sc-18gz688-0 bxHyXK Sizeweb__Size-sc-1e5yf1-0 ivlOax Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
                      >
                        <input
                          class="TextInputweb__StyledInput-sc-18gz688-1 hxHBWr Sizeweb__Size-sc-1e5yf1-0 exhaHT Spaceweb__Space-sc-1abqisc-0 gvLSev Flexweb__Flex-sc-1yhcoea-0 fCJFon"
                          data-testid="ds-text-input"
                          name="promoter_pan_name"
                          placeholder="Enter text here"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      class="Viewweb__View-sc-1o0hmxm-0 Lineweb__Line-sc-1xfvg0y-0 kNJYXM"
                    />
                  </div>
                  <div
                    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 eSXEJE"
                  >
                    <div
                      class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 fCJFon Spaceweb__Space-sc-1abqisc-0 coWVhD"
                    >
                      <div
                        class="Textweb__Text-sc-1qrdpx3-0 dFPmAI"
                        color="shade.950"
                        data-testid="ds-text"
                      >
                        As mentioned in the PAN
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Viewweb__View-sc-1o0hmxm-0 Card__StyledCard-sc-1tygnup-0 jiZCa-d Spaceweb__Space-sc-1abqisc-0 kGlNWI"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 eayzPs Spaceweb__Space-sc-1abqisc-0 epsywS"
          >
            <div
              class="Textweb__Text-sc-1qrdpx3-0 eEdtSY"
              color="shade.980"
              data-testid="ds-text"
            >
              Address Details
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1o0hmxm-0 FormSection__StyledView-sc-1kyf1yj-0 ilKiPB"
          >
            <div
              class="Viewweb__View-sc-1o0hmxm-0 eayzPs Spaceweb__Space-sc-1abqisc-0 hvcwgq"
            >
              <div
                class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 lgHtgi"
              >
                <div
                  class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hogGzB"
                >
                  <div
                    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hfOCsH"
                  >
                    <div
                      class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InteractionContainer-sc-18gz688-3 hMqHIj"
                    >
                      <div
                        class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__FillContainer-sc-18gz688-2 jxHNUe Spaceweb__Space-sc-1abqisc-0 fAtZGf Sizeweb__Size-sc-1e5yf1-0 dCxfKl"
                      >
                        <div
                          class="Viewweb__View-sc-1o0hmxm-0 Labelweb__FloatView-sc-1eubdu6-0 kxSngp Spaceweb__Space-sc-1abqisc-0 zryoY"
                        >
                          <label
                            class="Textweb__Text-sc-1qrdpx3-0 Labelweb__StyledText-sc-1eubdu6-1 dtOgfF"
                            color="shade.980"
                            data-testid="ds-text"
                            value=""
                            width="auto"
                          >
                            Enter Address
                          </label>
                        </div>
                        <div
                          class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InputContainer-sc-18gz688-0 bxHyXK Sizeweb__Size-sc-1e5yf1-0 ivlOax Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
                        >
                          <textarea
                            class="TextInputweb__StyledInput-sc-18gz688-1 hxHBWr Sizeweb__Size-sc-1e5yf1-0 exhaHT Spaceweb__Space-sc-1abqisc-0 gvLSev Flexweb__Flex-sc-1yhcoea-0 fCJFon"
                            data-testid="ds-text-area"
                            name="business_registered_address"
                            placeholder=""
                            rows="1"
                            style="height: 0px;"
                            type="text"
                          />
                        </div>
                      </div>
                      <div
                        class="Viewweb__View-sc-1o0hmxm-0 Lineweb__Line-sc-1xfvg0y-0 kNJYXM"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="Viewweb__View-sc-1o0hmxm-0 eayzPs Spaceweb__Space-sc-1abqisc-0 hvcwgq"
            >
              <div
                class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 lgHtgi"
              >
                <div
                  class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hogGzB"
                >
                  <div
                    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hfOCsH"
                  >
                    <div
                      class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InteractionContainer-sc-18gz688-3 hMqHIj"
                    >
                      <div
                        class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__FillContainer-sc-18gz688-2 jxHNUe Spaceweb__Space-sc-1abqisc-0 fAtZGf Sizeweb__Size-sc-1e5yf1-0 dCxfKl"
                      >
                        <div
                          class="Viewweb__View-sc-1o0hmxm-0 Labelweb__FloatView-sc-1eubdu6-0 kxSngp Spaceweb__Space-sc-1abqisc-0 zryoY"
                        >
                          <label
                            class="Textweb__Text-sc-1qrdpx3-0 Labelweb__StyledText-sc-1eubdu6-1 dtOgfF"
                            color="shade.980"
                            data-testid="ds-text"
                            value=""
                            width="auto"
                          >
                            Pincode
                          </label>
                        </div>
                        <div
                          class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InputContainer-sc-18gz688-0 bxHyXK Sizeweb__Size-sc-1e5yf1-0 ivlOax Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
                        >
                          <input
                            class="TextInputweb__StyledInput-sc-18gz688-1 hxHBWr Sizeweb__Size-sc-1e5yf1-0 exhaHT Spaceweb__Space-sc-1abqisc-0 gvLSev Flexweb__Flex-sc-1yhcoea-0 fCJFon"
                            data-testid="ds-text-input"
                            name="business_registered_pin"
                            placeholder="Enter text here"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class="Viewweb__View-sc-1o0hmxm-0 Lineweb__Line-sc-1xfvg0y-0 kNJYXM"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="Viewweb__View-sc-1o0hmxm-0 eayzPs Spaceweb__Space-sc-1abqisc-0 hvcwgq"
            >
              <div
                class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 lgHtgi"
              >
                <div
                  class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hogGzB"
                >
                  <div
                    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hfOCsH"
                  >
                    <div
                      class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InteractionContainer-sc-18gz688-3 hMqHIj"
                    >
                      <div
                        class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__FillContainer-sc-18gz688-2 jxHNUe Spaceweb__Space-sc-1abqisc-0 fAtZGf Sizeweb__Size-sc-1e5yf1-0 dCxfKl"
                      >
                        <div
                          class="Viewweb__View-sc-1o0hmxm-0 Labelweb__FloatView-sc-1eubdu6-0 kxSngp Spaceweb__Space-sc-1abqisc-0 zryoY"
                        >
                          <label
                            class="Textweb__Text-sc-1qrdpx3-0 Labelweb__StyledText-sc-1eubdu6-1 dtOgfF"
                            color="shade.980"
                            data-testid="ds-text"
                            value=""
                            width="auto"
                          >
                            City
                          </label>
                        </div>
                        <div
                          class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InputContainer-sc-18gz688-0 bxHyXK Sizeweb__Size-sc-1e5yf1-0 ivlOax Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
                        >
                          <input
                            class="TextInputweb__StyledInput-sc-18gz688-1 hxHBWr Sizeweb__Size-sc-1e5yf1-0 exhaHT Spaceweb__Space-sc-1abqisc-0 gvLSev Flexweb__Flex-sc-1yhcoea-0 fCJFon"
                            data-testid="ds-text-input"
                            name="business_registered_city"
                            placeholder="Enter text here"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class="Viewweb__View-sc-1o0hmxm-0 Lineweb__Line-sc-1xfvg0y-0 kNJYXM"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 lgHtgi"
            >
              <div
                class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hogGzB"
              >
                <div
                  class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hfOCsH"
                >
                  <div
                    class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InteractionContainer-sc-18gz688-3 hMqHIj"
                  >
                    <div
                      class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__FillContainer-sc-18gz688-2 jxHNUe Spaceweb__Space-sc-1abqisc-0 fAtZGf Sizeweb__Size-sc-1e5yf1-0 dCxfKl"
                    >
                      <div
                        class="Viewweb__View-sc-1o0hmxm-0 Labelweb__FloatView-sc-1eubdu6-0 kxSngp Spaceweb__Space-sc-1abqisc-0 zryoY"
                      >
                        <label
                          class="Textweb__Text-sc-1qrdpx3-0 Labelweb__StyledText-sc-1eubdu6-1 dtOgfF"
                          color="shade.980"
                          data-testid="ds-text"
                          value=""
                          width="auto"
                        >
                          Select State
                        </label>
                      </div>
                      <div
                        class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InputContainer-sc-18gz688-0 bxHyXK Sizeweb__Size-sc-1e5yf1-0 ivlOax Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
                      >
                        <input
                          class="TextInputweb__StyledInput-sc-18gz688-1 hxHBWr Sizeweb__Size-sc-1e5yf1-0 exhaHT Spaceweb__Space-sc-1abqisc-0 gvLSev Flexweb__Flex-sc-1yhcoea-0 fCJFon"
                          data-testid="ds-text-input"
                          name="business_registered_state"
                          placeholder="Enter text here"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      class="Viewweb__View-sc-1o0hmxm-0 Lineweb__Line-sc-1xfvg0y-0 kNJYXM"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="layerTestId"
      id="layerHost"
    />
  </div>
  <div
    data-testid="layerTestId"
    id="layerHost"
  />
</div>
`;

exports[`Storyshots Onboarding/FormSection Single Form Section 1`] = `
<div>
  <div>
    <div>
      <div
        class="Viewweb__View-sc-1o0hmxm-0 eayzPs"
      >
        <div
          class="Viewweb__View-sc-1o0hmxm-0 Card__StyledCard-sc-1tygnup-0 jiZCa-d Spaceweb__Space-sc-1abqisc-0 kGlNWI"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 eayzPs Spaceweb__Space-sc-1abqisc-0 epsywS"
          >
            <div
              class="Textweb__Text-sc-1qrdpx3-0 eEdtSY"
              color="shade.980"
              data-testid="ds-text"
            >
              Contact Details
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1o0hmxm-0 FormSection__StyledView-sc-1kyf1yj-0 ilKiPB"
          >
            <div
              class="Viewweb__View-sc-1o0hmxm-0 eayzPs Spaceweb__Space-sc-1abqisc-0 hvcwgq"
            >
              <div
                class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 lgHtgi"
              >
                <div
                  class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hogGzB"
                >
                  <div
                    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hfOCsH"
                  >
                    <div
                      class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InteractionContainer-sc-18gz688-3 hMqHIj"
                    >
                      <div
                        class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__FillContainer-sc-18gz688-2 jxHNUe Spaceweb__Space-sc-1abqisc-0 fAtZGf Sizeweb__Size-sc-1e5yf1-0 dCxfKl"
                      >
                        <div
                          class="Viewweb__View-sc-1o0hmxm-0 Labelweb__FloatView-sc-1eubdu6-0 kxSngp Spaceweb__Space-sc-1abqisc-0 zryoY"
                        >
                          <label
                            class="Textweb__Text-sc-1qrdpx3-0 Labelweb__StyledText-sc-1eubdu6-1 dtOgfF"
                            color="shade.980"
                            data-testid="ds-text"
                            value=""
                            width="auto"
                          >
                            Contact Name
                          </label>
                        </div>
                        <div
                          class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InputContainer-sc-18gz688-0 bxHyXK Sizeweb__Size-sc-1e5yf1-0 ivlOax Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
                        >
                          <input
                            class="TextInputweb__StyledInput-sc-18gz688-1 hxHBWr Sizeweb__Size-sc-1e5yf1-0 exhaHT Spaceweb__Space-sc-1abqisc-0 gvLSev Flexweb__Flex-sc-1yhcoea-0 fCJFon"
                            data-testid="ds-text-input"
                            name="contact_name"
                            placeholder="Enter text here"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class="Viewweb__View-sc-1o0hmxm-0 Lineweb__Line-sc-1xfvg0y-0 kNJYXM"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="Viewweb__View-sc-1o0hmxm-0 eayzPs Spaceweb__Space-sc-1abqisc-0 hvcwgq"
            >
              <div
                class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 lgHtgi"
              >
                <div
                  class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hogGzB"
                >
                  <div
                    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hfOCsH"
                  >
                    <div
                      class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InteractionContainer-sc-18gz688-3 hMqHIj"
                    >
                      <div
                        class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__FillContainer-sc-18gz688-2 jxHNUe Spaceweb__Space-sc-1abqisc-0 fAtZGf Sizeweb__Size-sc-1e5yf1-0 dCxfKl"
                      >
                        <div
                          class="Viewweb__View-sc-1o0hmxm-0 Labelweb__FloatView-sc-1eubdu6-0 kxSngp Spaceweb__Space-sc-1abqisc-0 zryoY"
                        >
                          <label
                            class="Textweb__Text-sc-1qrdpx3-0 Labelweb__StyledText-sc-1eubdu6-1 dtOgfF"
                            color="shade.980"
                            data-testid="ds-text"
                            value=""
                            width="auto"
                          >
                            Contact Email
                          </label>
                        </div>
                        <div
                          class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InputContainer-sc-18gz688-0 bxHyXK Sizeweb__Size-sc-1e5yf1-0 ivlOax Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
                        >
                          <input
                            class="TextInputweb__StyledInput-sc-18gz688-1 hxHBWr Sizeweb__Size-sc-1e5yf1-0 exhaHT Spaceweb__Space-sc-1abqisc-0 gvLSev Flexweb__Flex-sc-1yhcoea-0 fCJFon"
                            data-testid="ds-text-input"
                            name="contact_email"
                            placeholder="Enter text here"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class="Viewweb__View-sc-1o0hmxm-0 Lineweb__Line-sc-1xfvg0y-0 kNJYXM"
                      />
                    </div>
                    <div
                      class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 eSXEJE"
                    >
                      <div
                        class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 fCJFon Spaceweb__Space-sc-1abqisc-0 coWVhD"
                      >
                        <div
                          class="Textweb__Text-sc-1qrdpx3-0 dFPmAI"
                          color="shade.950"
                          data-testid="ds-text"
                        >
                          We will reach out at this email id in case of any account related issue
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 lgHtgi"
            >
              <div
                class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hogGzB"
              >
                <div
                  class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hfOCsH"
                >
                  <div
                    class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InteractionContainer-sc-18gz688-3 hMqHIj"
                  >
                    <div
                      class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__FillContainer-sc-18gz688-2 jxHNUe Spaceweb__Space-sc-1abqisc-0 fAtZGf Sizeweb__Size-sc-1e5yf1-0 dCxfKl"
                    >
                      <div
                        class="Viewweb__View-sc-1o0hmxm-0 Labelweb__FloatView-sc-1eubdu6-0 kxSngp Spaceweb__Space-sc-1abqisc-0 zryoY"
                      >
                        <label
                          class="Textweb__Text-sc-1qrdpx3-0 Labelweb__StyledText-sc-1eubdu6-1 dtOgfF"
                          color="shade.980"
                          data-testid="ds-text"
                          value=""
                          width="auto"
                        >
                          Contact Number
                        </label>
                      </div>
                      <div
                        class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InputContainer-sc-18gz688-0 bxHyXK Sizeweb__Size-sc-1e5yf1-0 ivlOax Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
                      >
                        <input
                          class="TextInputweb__StyledInput-sc-18gz688-1 hxHBWr Sizeweb__Size-sc-1e5yf1-0 exhaHT Spaceweb__Space-sc-1abqisc-0 gvLSev Flexweb__Flex-sc-1yhcoea-0 fCJFon"
                          data-testid="ds-text-input"
                          name="contact_number"
                          placeholder="Enter text here"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      class="Viewweb__View-sc-1o0hmxm-0 Lineweb__Line-sc-1xfvg0y-0 kNJYXM"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="layerTestId"
      id="layerHost"
    />
  </div>
  <div
    data-testid="layerTestId"
    id="layerHost"
  />
</div>
`;

exports[`Storyshots Onboarding/FormSection Single Form Section Error 1`] = `
<div>
  <div>
    <div>
      <div
        class="Viewweb__View-sc-1o0hmxm-0 eayzPs"
      >
        <div
          class="Viewweb__View-sc-1o0hmxm-0 Card__StyledCard-sc-1tygnup-0 jiZCa-d Spaceweb__Space-sc-1abqisc-0 kGlNWI"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 eayzPs Spaceweb__Space-sc-1abqisc-0 epsywS"
          >
            <div
              class="Textweb__Text-sc-1qrdpx3-0 eEdtSY"
              color="shade.980"
              data-testid="ds-text"
            >
              Contact Details
            </div>
            <div
              class="Textweb__Text-sc-1qrdpx3-0 BOLhS"
              color="negative.900"
              data-testid="ds-text"
            >
              We were unable to verify contact number.
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1o0hmxm-0 FormSection__StyledView-sc-1kyf1yj-0 ilKiPB"
          >
            <div
              class="Viewweb__View-sc-1o0hmxm-0 eayzPs Spaceweb__Space-sc-1abqisc-0 hvcwgq"
            >
              <div
                class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 lgHtgi"
              >
                <div
                  class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hogGzB"
                >
                  <div
                    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hfOCsH"
                  >
                    <div
                      class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InteractionContainer-sc-18gz688-3 hMqHIj"
                    >
                      <div
                        class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__FillContainer-sc-18gz688-2 jxHNUe Spaceweb__Space-sc-1abqisc-0 fAtZGf Sizeweb__Size-sc-1e5yf1-0 dCxfKl"
                      >
                        <div
                          class="Viewweb__View-sc-1o0hmxm-0 Labelweb__FloatView-sc-1eubdu6-0 kxSngp Spaceweb__Space-sc-1abqisc-0 zryoY"
                        >
                          <label
                            class="Textweb__Text-sc-1qrdpx3-0 Labelweb__StyledText-sc-1eubdu6-1 dtOgfF"
                            color="shade.980"
                            data-testid="ds-text"
                            value=""
                            width="auto"
                          >
                            Contact Name
                          </label>
                        </div>
                        <div
                          class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InputContainer-sc-18gz688-0 bxHyXK Sizeweb__Size-sc-1e5yf1-0 ivlOax Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
                        >
                          <input
                            class="TextInputweb__StyledInput-sc-18gz688-1 hxHBWr Sizeweb__Size-sc-1e5yf1-0 exhaHT Spaceweb__Space-sc-1abqisc-0 gvLSev Flexweb__Flex-sc-1yhcoea-0 fCJFon"
                            data-testid="ds-text-input"
                            name="contact_name"
                            placeholder="Enter text here"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class="Viewweb__View-sc-1o0hmxm-0 Lineweb__Line-sc-1xfvg0y-0 kNJYXM"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="Viewweb__View-sc-1o0hmxm-0 eayzPs Spaceweb__Space-sc-1abqisc-0 hvcwgq"
            >
              <div
                class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 lgHtgi"
              >
                <div
                  class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hogGzB"
                >
                  <div
                    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hfOCsH"
                  >
                    <div
                      class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InteractionContainer-sc-18gz688-3 hMqHIj"
                    >
                      <div
                        class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__FillContainer-sc-18gz688-2 jxHNUe Spaceweb__Space-sc-1abqisc-0 fAtZGf Sizeweb__Size-sc-1e5yf1-0 dCxfKl"
                      >
                        <div
                          class="Viewweb__View-sc-1o0hmxm-0 Labelweb__FloatView-sc-1eubdu6-0 kxSngp Spaceweb__Space-sc-1abqisc-0 zryoY"
                        >
                          <label
                            class="Textweb__Text-sc-1qrdpx3-0 Labelweb__StyledText-sc-1eubdu6-1 dtOgfF"
                            color="shade.980"
                            data-testid="ds-text"
                            value=""
                            width="auto"
                          >
                            Contact Email
                          </label>
                        </div>
                        <div
                          class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InputContainer-sc-18gz688-0 bxHyXK Sizeweb__Size-sc-1e5yf1-0 ivlOax Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
                        >
                          <input
                            class="TextInputweb__StyledInput-sc-18gz688-1 hxHBWr Sizeweb__Size-sc-1e5yf1-0 exhaHT Spaceweb__Space-sc-1abqisc-0 gvLSev Flexweb__Flex-sc-1yhcoea-0 fCJFon"
                            data-testid="ds-text-input"
                            name="contact_email"
                            placeholder="Enter text here"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class="Viewweb__View-sc-1o0hmxm-0 Lineweb__Line-sc-1xfvg0y-0 kNJYXM"
                      />
                    </div>
                    <div
                      class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 eSXEJE"
                    >
                      <div
                        class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 fCJFon Spaceweb__Space-sc-1abqisc-0 coWVhD"
                      >
                        <div
                          class="Textweb__Text-sc-1qrdpx3-0 dFPmAI"
                          color="shade.950"
                          data-testid="ds-text"
                        >
                          We will reach out at this email id in case of any account related issue
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 lgHtgi"
            >
              <div
                class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hogGzB"
              >
                <div
                  class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hfOCsH"
                >
                  <div
                    class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InteractionContainer-sc-18gz688-3 hMqHIj"
                  >
                    <div
                      class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__FillContainer-sc-18gz688-2 jxHNUe Spaceweb__Space-sc-1abqisc-0 fAtZGf Sizeweb__Size-sc-1e5yf1-0 dCxfKl"
                    >
                      <div
                        class="Viewweb__View-sc-1o0hmxm-0 Labelweb__FloatView-sc-1eubdu6-0 kxSngp Spaceweb__Space-sc-1abqisc-0 zryoY"
                      >
                        <label
                          class="Textweb__Text-sc-1qrdpx3-0 Labelweb__StyledText-sc-1eubdu6-1 dtOgfF"
                          color="shade.980"
                          data-testid="ds-text"
                          value=""
                          width="auto"
                        >
                          Contact Number
                        </label>
                      </div>
                      <div
                        class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InputContainer-sc-18gz688-0 bxHyXK Sizeweb__Size-sc-1e5yf1-0 ivlOax Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
                      >
                        <input
                          class="TextInputweb__StyledInput-sc-18gz688-1 hxHBWr Sizeweb__Size-sc-1e5yf1-0 exhaHT Spaceweb__Space-sc-1abqisc-0 gvLSev Flexweb__Flex-sc-1yhcoea-0 fCJFon"
                          data-testid="ds-text-input"
                          name="contact_number"
                          placeholder="Enter text here"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      class="Viewweb__View-sc-1o0hmxm-0 Lineweb__Line-sc-1xfvg0y-0 kNJYXM"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="layerTestId"
      id="layerHost"
    />
  </div>
  <div
    data-testid="layerTestId"
    id="layerHost"
  />
</div>
`;
